objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Lines_of_Authority__c</fullName>
        <label>Lines of Authority</label>
        <picklist>
            <picklistValues>
                <fullName>Accident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casualty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Annuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Index Annuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraternal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Lines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Special Risks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Lines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-paid Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement Cost Coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Universal Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable Annuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable Universal Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vatical Settlement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whole-life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workers Compensation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_Approved__c</fullName>
        <label>Loan Amount Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_Requested__c</fullName>
        <label>Loan Amount Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Memberships__c</fullName>
        <label>Memberships</label>
        <picklist>
            <picklistValues>
                <fullName>AICPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAIFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIFS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>NPN__c</fullName>
        <label>NPN#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Normal_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Normal Processing</description>
        <label>Normal Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <formula>CEILING (NOW() - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of contact In days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_days_to_become_Contact__c</fullName>
        <formula>CEILING (CreatedDate - Lead_Creation_date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of days to become Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSJ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Accepted__c</fullName>
        <label>Offer Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Declined__c</fullName>
        <label>Offer Declined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Sent__c</fullName>
        <label>Offer Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpptyStage__c</fullName>
        <label>Opportunity Stage</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prelim Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prelim Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUM Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDC Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prelim Normal Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prelim Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prelim Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Letter Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINRA Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oppty_Status__c</fullName>
        <label>Opportunity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed/Lost</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed/Won</fullName>
                <color>#33CC00</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OptyOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used to store Opportunity Owner Name.</description>
        <label>OptyOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OptyStageDate__c</fullName>
        <description>This is used for CreatedDate of the current stage of the Prospect’s RecentOpty from OpportunityHistories object.</description>
        <label>OptyStageDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OptyStageDuration__c</fullName>
        <description>This is used for Stage duration calculation.</description>
        <formula>TODAY()  -  OptyStageDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OptyStageDuration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Business__c</fullName>
        <label>Other Business</label>
        <picklist>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property &amp; Casualty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pension &amp; Retirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate Investing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Properties</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Title__c</fullName>
        <label>Other Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payout_Approved__c</fullName>
        <label>Payout Approved</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Payout_Requested__c</fullName>
        <label>Payout Requested</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Preferred_Communication__c</fullName>
        <label>Preferred Communication</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preliminary_App_Approved__c</fullName>
        <description>Preliminary App Approved</description>
        <label>Preliminary App Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preliminary_App_Received__c</fullName>
        <description>Preliminary App Received</description>
        <label>Preliminary App Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preliminary_App_Sent__c</fullName>
        <label>Preliminary App Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premier_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premier Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_for_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Primary Contact for Account</description>
        <label>Primary Contact for Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Step__c</fullName>
        <label>Process Step</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Interests__c</fullName>
        <label>Product Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Annuitites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Wealth Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Professional_Title__c</fullName>
        <label>Professional Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promissory_Note_Req__c</fullName>
        <label>Promissory Note Req</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promissory_Note_Sent__c</fullName>
        <label>Promissory Note Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promissory_Note_Sent_to_Finance__c</fullName>
        <label>Promissory Note Sent to Finance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proof_of_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof of Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_Transition_Date__c</fullName>
        <description>The date the contact transitioned to status/type: Warm/Prospect.</description>
        <inlineHelpText>The date the contact transitioned to status/type: Warm/Prospect.</inlineHelpText>
        <label>Prospect Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prospective_GDC__c</fullName>
        <label>Prospective GDC</label>
        <picklist>
            <picklistValues>
                <fullName>Less than $100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100,000 - $300,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$300,000 - $600,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$600,000 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualified_Loan_Amount__c</fullName>
        <description>Loan amount approved based on GDC</description>
        <inlineHelpText>GDC Approved based on Loan Amount</inlineHelpText>
        <label>Qualified Loan GDC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RIA__c</fullName>
        <label>RIA</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Closure__c</fullName>
        <label>Reason for Closure</label>
        <picklist>
            <picklistValues>
                <fullName>Recruit Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed by Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied by Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied by Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested by Advisor Recruitment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RecentOppty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Most recent Opportunity at the Prospect</description>
        <label>Recent Oppty</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contacts (Recent Oppty)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recruiting_Process__c</fullName>
        <label>Recruiting Process</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruitment_Kit__c</fullName>
        <label>Recruitment Kit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recruitment_Probability__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This field is temporarily editable for testing until the temperature workflows are in place.</inlineHelpText>
        <label>Recruitment Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Referral_Type__c</fullName>
        <label>Referral Type</label>
        <picklist>
            <picklistValues>
                <fullName>ABGA Recruiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA Recruiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFD Wholesalers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Recruiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <description>Referred By</description>
        <label>Referred By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Referral_Form_Rec__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rep Referral Form Rec.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rep_Since__c</fullName>
        <label>Rep Since</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_To_HO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting To HO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_To_OSJ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting To OSJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requesting_Fee_Waivers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requesting Fee Waivers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_401_k__c</fullName>
        <label>401(k)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Alt_Inv__c</fullName>
        <description>Revenue_Alt_Inv</description>
        <label>Alt Inv</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Bonds__c</fullName>
        <description>Bonds</description>
        <label>Bonds</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Broker_Dealer_Total__c</fullName>
        <description>Total Broker/Dealer Revenue</description>
        <formula>IF(
ISBLANK(Revenue_Mutual_Funds__c) &amp;&amp;
ISBLANK(Revenue_Stocks__c) &amp;&amp;
ISBLANK(Revenue_Bonds__c) &amp;&amp;
ISBLANK(Revenue_VA__c) &amp;&amp;
ISBLANK(Revenue_VUL__c) &amp;&amp;
ISBLANK(Revenue_Fixed_Insurance__c) &amp;&amp;
ISBLANK(Revenue_Fee_Based__c) &amp;&amp;
ISBLANK(Revenue_Alt_Inv__c) &amp;&amp;
ISBLANK(Revenue_Other__c),
null, 
NULLVALUE(Revenue_Mutual_Funds__c,0) + 
NULLVALUE(Revenue_Stocks__c,0) + 
NULLVALUE(Revenue_Bonds__c,0) + 
NULLVALUE(Revenue_VA__c,0) + 
NULLVALUE(Revenue_VUL__c,0) + 
NULLVALUE(Revenue_Fixed_Insurance__c,0) + 
NULLVALUE(Revenue_Fee_Based__c,0) + 
NULLVALUE(Revenue_Alt_Inv__c,0) + 
NULLVALUE(Revenue_Other__c,0)
)</formula>
        <label>Broker/Dealer Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Equity_Index_Annuity__c</fullName>
        <label>Equity Index Annuity</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Fee_Based__c</fullName>
        <description>Revenue_Fee_Based</description>
        <label>Fee Based</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Fixed_Insurance__c</fullName>
        <label>Fixed Insurance</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Fixed__c</fullName>
        <label>Fixed</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Life_Annuity_Total__c</fullName>
        <description>Total Life &amp; Annuity Revenue</description>
        <formula>IF(
ISBLANK(Revenue_Fixed__c) &amp;&amp;
ISBLANK(Revenue_Term__c) &amp;&amp;
ISBLANK(Revenue_Universal__c) &amp;&amp;
ISBLANK(Revenue_Equity_Index_Annuity__c) &amp;&amp;
ISBLANK(Revenue_Whole_Life__c) &amp;&amp;
ISBLANK(Revenue_401_k__c),
null, 
NULLVALUE(Revenue_Fixed__c,0) + 
NULLVALUE(Revenue_Term__c,0) + 
NULLVALUE(Revenue_Universal__c,0) + 
NULLVALUE(Revenue_Equity_Index_Annuity__c,0) + 
NULLVALUE(Revenue_Whole_Life__c,0) + 
NULLVALUE(Revenue_401_k__c,0)
)</formula>
        <label>Life &amp; Annuity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Mutual_Funds__c</fullName>
        <description>Mutual Funds</description>
        <label>Mutual Funds</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Other__c</fullName>
        <description>Revenue_Other</description>
        <label>Other</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Stocks__c</fullName>
        <description>Stocks</description>
        <label>Stocks</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Term__c</fullName>
        <label>Term</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Universal__c</fullName>
        <label>Universal</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_VA__c</fullName>
        <label>VA</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_VUL__c</fullName>
        <label>VUL</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Whole_Life__c</fullName>
        <label>Whole Life</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Saleslogix_Contact_Id__c</fullName>
        <externalId>true</externalId>
        <label>Saleslogix Contact Id</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Secondary_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secondary Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <picklist>
            <controllingField>Contract_Type__c</controllingField>
            <picklistValues>
                <fullName>APG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apprenticeship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aggregation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fingerprinted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Fingerprinted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TFR_Received__c</fullName>
        <label>TFR Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TFR_Review_Complete__c</fullName>
        <label>TFR Review Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transition_Checklist_Provided_Date__c</fullName>
        <description>Transition Checklist Provided Date</description>
        <label>Transition Checklist Provided Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transition_Consultant__c</fullName>
        <description>Transition Consultant</description>
        <label>Transition Consultant</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transition_Planning_Call_Date__c</fullName>
        <description>Transition Planning Call Date</description>
        <label>Transition Planning Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UpdatedFromOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not solicit checking if it is done from Opportunity page</description>
        <label>UpdatedFromOpportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warm_Transition_Date__c</fullName>
        <description>The Day Contact Type Becomes Warm</description>
        <label>Warm Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <listViews>
        <fullName>AFN</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>Broker_Dealer__c</columns>
        <columns>Rep_Since__c</columns>
        <filterScope>Everything</filterScope>
        <label>AFN VA Beach</label>
        <sharedTo>
            <role>National_Recruiter_Northw</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AFN_NJ</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>Broker_Dealer__c</columns>
        <columns>Rep_Since__c</columns>
        <filterScope>Everything</filterScope>
        <label>AFN NJ</label>
        <sharedTo>
            <role>National_Recruiter_Northw</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AIG_Campaign</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>Broker_Dealer__c</columns>
        <columns>Cohort_Type__c</columns>
        <columns>Cohort_Sub_Type__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>14LFN0001</label>
        <sharedTo>
            <role>Home_Office</role>
            <role>National_Recruiter</role>
            <role>National_Recruiter_Northw</role>
            <role>National_Recruiter_Southeast</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>Contact_Type__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Prospects</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>CAG</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>Broker_Dealer__c</columns>
        <columns>Rep_Since__c</columns>
        <filterScope>Everything</filterScope>
        <label>CAG</label>
        <sharedTo>
            <role>National_Recruiter_Northw</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cincinnati_RPO_New_England_Metlife_Zip</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>Broker_Dealer__c</columns>
        <columns>Field_Office__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.ADDRESS2_ZIP</field>
            <operation>startsWith</operation>
            <value>452,477</value>
        </filters>
        <filters>
            <field>Broker_Dealer__c</field>
            <operation>startsWith</operation>
            <value>New England,Metlife</value>
        </filters>
        <filters>
            <field>Field_Office__c</field>
            <operation>startsWith</operation>
            <value>Mid America</value>
        </filters>
        <label>Cincinnati RPO New England Metlife Zip</label>
        <sharedTo>
            <roleAndSubordinates>Managing_Director_Mid_America</roleAndSubordinates>
            <roleAndSubordinates>Managing_Principal_Mid_America</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>